[metadata]
name = sgg
version = 0.0.1
author = Alessio Gravina, Danilo Numeroso
author_email = alessio.gravina@phd.unipi.it, danilo.numeroso@phd.unipi.it
description = Utility package for generating graph structures
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gravins/graph-generator
project_urls =
    Bug Tracker = https://github.com/gravins/graph-generator
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
  = src
packages = find:
python_requires = >=3.8
install_requires =
  numpy==1.21

[options.packages.find]
where = src